// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`break-tags.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<a>Lorem</a>, ispum dolor sit <strong>amet</strong>.
<div><a>Lorem</a>, ispum dolor sit <strong>amet</strong>.</div>
<div><div><a>Lorem</a>, ispum dolor sit <strong>amet</strong>.</div></div>

=====================================output=====================================
<a>Lorem</a>, ispum dolor sit <strong>amet</strong>.
<div><a>Lorem</a>, ispum dolor sit <strong>amet</strong>.</div>
<div>
  <div><a>Lorem</a>, ispum dolor sit <strong>amet</strong>.</div>
</div>

================================================================================
`;

exports[`display-inline-block.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
<button>
Click here! Click here! Click here! Click here! Click here! Click here!
</button>
<div>
<button>Click here! Click here! Click here! Click here! Click here! Click here!</button><button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
</div>
<div>
<button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
<button>Click here! Click here! Click here! Click here! Click here! Click here!</button>
</div>
<video src="brave.webm"><track kind=subtitles src=brave.en.vtt srclang=en label="English"><track kind=subtitles src=brave.en.vtt srclang=en label="English"></video>

=====================================output=====================================
<button>
  Click here! Click here! Click here! Click here! Click here! Click here!
</button>
<button>
  Click here! Click here! Click here! Click here! Click here! Click here!
</button>
<div>
  <button>
    Click here! Click here! Click here! Click here! Click here! Click here!</button
  ><button>
    Click here! Click here! Click here! Click here! Click here! Click here!
  </button>
</div>
<div>
  <button>
    Click here! Click here! Click here! Click here! Click here! Click here!
  </button>
  <button>
    Click here! Click here! Click here! Click here! Click here! Click here!
  </button>
</div>
<video src="brave.webm">
  <track kind="subtitles" src="brave.en.vtt" srclang="en" label="English" />
  <track kind="subtitles" src="brave.en.vtt" srclang="en" label="English" />
</video>

================================================================================
`;

exports[`display-none.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><HTML CLASS="no-js mY-ClAsS"><HEAD><META CHARSET="utf-8"><TITLE>My tITlE</TITLE><META NAME="description" content="My CoNtEnT"></HEAD></HTML>

=====================================output=====================================
<!DOCTYPE html>
<html class="no-js mY-ClAsS">
  <head>
    <meta charset="utf-8" />
    <title>My tITlE</title>
    <meta name="description" content="My CoNtEnT" />
  </head>
</html>

================================================================================
`;

exports[`fill.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>
  <img
    src="/images/pansies.jpg"
    alt="about fedco bottom image"
    style="float: left;"
  /><strong>We are a cooperative</strong>, one of the few seed companies so organized
  in the United States. Because we do not have an individual owner or beneficiary,
  profit is not our primary goal. Consumers own 60% of the cooperative and worker
  members 40%. Consumer and worker members share proportionately in the cooperative&#8217;s
  profits through our annual patronage dividends.
</p>

=====================================output=====================================
<p>
  <img
    src="/images/pansies.jpg"
    alt="about fedco bottom image"
    style="float: left;"
  /><strong>We are a cooperative</strong>, one of the few seed companies so
  organized in the United States. Because we do not have an individual owner or
  beneficiary, profit is not our primary goal. Consumers own 60% of the
  cooperative and worker members 40%. Consumer and worker members share
  proportionately in the cooperative&#8217;s profits through our annual
  patronage dividends.
</p>

================================================================================
`;

exports[`inline-leading-trailing-spaces.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<span> 321 </span>

<span> <a>321</a> </span>

=====================================output=====================================
<span> 321 </span>

<span> <a>321</a> </span>

================================================================================
`;

exports[`inline-nodes.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus massa vel augue 
vestibulum facilisis in porta turpis. Ut faucibus lectus sit amet urna consectetur dignissim.
Sam vitae neque quis ex dapibus faucibus at sed ligula. Nulla sit amet aliquet nibh.
Vestibulum at congue mi. Suspendisse vitae odio vitae massa hendrerit mattis sed eget dui.
Sed eu scelerisque neque. Donec <b>maximus</b> rhoncus pellentesque. Aenean purus turpis, vehicula 
euismod ante vel, ultricies eleifend dui. Class aptent taciti sociosqu ad litora torquent per 
conubia nostra, per inceptos himenaeos. Donec in ornare velit.</p>

<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus massa vel augue 
vestibulum facilisis in porta turpis. Ut faucibus lectus sit amet urna consectetur dignissim.
Sam vitae neque quis ex dapibus faucibus at sed ligula. Nulla sit amet aliquet nibh.
Vestibulum at congue mi. Suspendisse vitae odio vitae massa hendrerit mattis sed eget dui.
Sed eu scelerisque neque. Donec <a href="#"><b>maximus</b></a> rhoncus pellentesque. Aenean purus turpis, vehicula 
euismod ante vel, ultricies eleifend dui. Class aptent taciti sociosqu ad litora torquent per 
conubia nostra, per inceptos himenaeos. Donec in ornare velit.</p>

=====================================output=====================================
<p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus massa
  vel augue vestibulum facilisis in porta turpis. Ut faucibus lectus sit amet
  urna consectetur dignissim. Sam vitae neque quis ex dapibus faucibus at sed
  ligula. Nulla sit amet aliquet nibh. Vestibulum at congue mi. Suspendisse
  vitae odio vitae massa hendrerit mattis sed eget dui. Sed eu scelerisque
  neque. Donec <b>maximus</b> rhoncus pellentesque. Aenean purus turpis,
  vehicula euismod ante vel, ultricies eleifend dui. Class aptent taciti
  sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec
  in ornare velit.
</p>

<p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus massa
  vel augue vestibulum facilisis in porta turpis. Ut faucibus lectus sit amet
  urna consectetur dignissim. Sam vitae neque quis ex dapibus faucibus at sed
  ligula. Nulla sit amet aliquet nibh. Vestibulum at congue mi. Suspendisse
  vitae odio vitae massa hendrerit mattis sed eget dui. Sed eu scelerisque
  neque. Donec <a href="#"><b>maximus</b></a> rhoncus pellentesque. Aenean purus
  turpis, vehicula euismod ante vel, ultricies eleifend dui. Class aptent taciti
  sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec
  in ornare velit.
</p>

================================================================================
`;

exports[`non-breaking-whitespace.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- normal whitespaces -->
<span>Nihil aut odit omnis. Quam maxime est molestiae. Maxime dolorem dolores voluptas quaerat ut qui sunt vitae error.</span>
<!-- non-breaking whitespaces -->
<span>Nihil aut odit omnis. Quam maxime est molestiae. Maxime dolorem dolores voluptas quaerat ut qui sunt vitae error.</span>

=====================================output=====================================
<!-- normal whitespaces -->
<span
  >Nihil aut odit omnis. Quam maxime est molestiae. Maxime dolorem dolores
  voluptas quaerat ut qui sunt vitae error.</span
>
<!-- non-breaking whitespaces -->
<span
  >Nihil aut odit omnis. Quam maxime est molestiae. Maxime dolorem dolores voluptas quaerat ut qui sunt vitae error.</span
>

================================================================================
`;

exports[`table.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<table>
  <thead>
    <tr>
      <th>A</th>
      <th>B</th>
      <th>C</th>
    </tr>
  </thead>
</table>

<table><thead><tr><th>A</th><th>B</th><th>C</th></tr></thead></table>

<table> <thead> <tr> <th> A </th> <th> B </th> <th> C </th> </tr> </thead> </table>

<table>
  <thead>
    <tr>
    </tr>
  </thead>
</table>

=====================================output=====================================
<table>
  <thead>
    <tr>
      <th>A</th>
      <th>B</th>
      <th>C</th>
    </tr>
  </thead>
</table>

<table>
  <thead>
    <tr>
      <th>A</th>
      <th>B</th>
      <th>C</th>
    </tr>
  </thead>
</table>

<table>
  <thead>
    <tr>
      <th>A</th>
      <th>B</th>
      <th>C</th>
    </tr>
  </thead>
</table>

<table>
  <thead>
    <tr></tr>
  </thead>
</table>

================================================================================
`;
